2018-12-31  Daniel Hawkins
    * utils/crossloop.web.in: Make SRCDIR be determined on the fly.
      This reduces the number of variables that need to be changed before use.
    * common/readable.c: Add more book titles.

2018-12-30  Daniel Hawkins
    * server/player.c: Simplify melee weapon pickup logic, since tables and chairs
      haven't been weapons since 2011.

2018-12-24  Daniel Hawkins
    * server/c_object.c: Fix "gods...retrieves" to agree in plurality.
    * plugins/cfcitybell/*: Refactor city temple bell event to be its own non-Python unit.
    * plugins/Makefile.am: Add the new independent citybell plugin to the build tree.
    * configure.ac: Add config rules to allow for the city bells to be disabled.

2018-12-23  Daniel Hawkins
    * common/links.c: Better utilize the calloc function to set the dynamic allocated
      lists to 0 as it is allocated.
    * socket/request.c: Rewrite spell_client_use to use a switch statement instead of ifs.

2018-12-22  Daniel Hawkins
    * server/hiscore.c: Adjust i+1 followed by i++ to be ++i;
        (Reverted due to out-of-bounds error w/ optimization by ryo_saeba on 26 Dec)

2018-10-28  Daniel Hawkins
    * common/living.c,
      common/artifact.c: Make items that have the confused flag set confuse the wielder.
    * lib/artifacts: Add a helmet of Confusion to utilize the new item-sourced confusion.

2018-10-24  Daniel Hawkins
    * common/readable.c: Make text from the messages file not get split at buffer boundaries.
    * server/player.c,
      common/living.c: Make dragon ability gain levels specified in magic field in treasurelist.

2018-10-23  Daniel Hawkins
    * common/readable.c: Add "illuminated text" as a religion book name.
    * server/c_object.c: Refactor a loop through the player's inventory to better use the op->contr->mark pointer.

2018-10-22  Daniel Hawkins
    * random_maps/style.c: Remove superfluous use of buffer and snprintf.
    * include/global.h,
      common/loader.l,